2006-11-28  David Bateman  <dbateman@free.fr>

	* oct-sparse.h: Allow sparse headers to also be in a sparsesuite
	sub-directory.

        * dSparse.cc (SparseMatrix SparseMatrix::inverse(...)): Transpose
	the matrix type as well when calling tinverse for lower
	triangular
	matrices
        * CSparse.cc (SparseComplexMatrix SparseComplexMatrix::inverse(...)):
        ditto.
					
2006-11-21  John W. Eaton  <jwe@octave.org>

	* oct-env.cc (do_absolute_pathname): Undo previous change.

2006-11-20  John W. Eaton  <jwe@octave.org>

	* oct-env.cc (octave_env::do_absolute_pathname): Also return true
	for ".", and names beginning with "./" or "../".

2006-11-14  Luis F. Ortiz  <lortiz@interactivesupercomputing.com>

	* CMatrix.cc, dMatrix.cc: New tests.

2006-11-13  Michael Goffioul  <michael.goffioul@swing.be>

	* Array-d.cc, dDiagMatrix.h: Sprinkle with OCTAVE_API as needed.

2006-11-11  John W. Eaton  <jwe@octave.org>

	* Makefile.in ($(OPTS_INC), mx-ops.h):
	Use $(simple-move-if-change-rule) here.

2006-11-09  David Bateman  <dbateman@free.fr>

	* sparse-base-chol.cc (sparse_base_chol_rep::Q): Cast perms(i) to
	octave_idx_type, not int.

2006-11-08  John W. Eaton  <jwe@octave.org>

	* dir-ops.cc (dir_entry::read): Avoid rewinddir.

2006-11-06  John W. Eaton  <jwe@octave.org>

	* Array.cc (assignN): Exit early if invalid indices are found.

2006-11-03  Michael Goffioul  <michael.goffioul@swing.be>

	* strftime.c [HAVE_TZNAME]: Tag tzname with OCTAVE_IMPORT.

2006-11-03  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DLL_CXXDEFS): Rename from XTRA_CXXDEFS.
	(DLL_CDEFS): Rename from XTRA_CDEFS.
	Substitute OCTAVE_DLL_DEFS, not XTRA_OCTAVE_DEFS.

2006-10-28  Michael Goffioul  <michael.goffioul@swing.be>

	* oct-shlib.cc: Undefine min and max after including windows.h.
	* oct-syscalls.cc (syscalls::pipe (int *)): Avoid infinite recursion.
	* lo-sysdep.h: Move opendir, readdir, etc. decls here from
	lo-sysdep.cc.

2006-10-27  John W. Eaton  <jwe@octave.org>
